--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,19 @@
             <id>aikar</id>
             <url>https://repo.aikar.co/content/groups/aikar/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
   </repositories>  
+
   
       <dependencies>
+      	<dependency>
+      		<groupId>com.github.novaplaype</groupId>
+      		<artifactId>NovaLib</artifactId>
+      		<version>f73ca0cc47fc72e0859ef7e3dd408d3e866d1bfb</version>
+      	</dependency>
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
